examples/datalog/15_arithmetic/21_modulo_operations.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_modulo
Knowledge graph 'test_modulo' created.
Switched to knowledge graph: test_modulo
> .kg use test_modulo
Switched to knowledge graph: test_modulo
> +numbers[(10,), (15,), (20,), (25,), (30,)].
Inserted 5 fact(s) into 'numbers'.
> even(X) :- numbers(X), X div_by_5(X) :- numbers(X), X div_by_10(X) :- numbers(X), X ?- even(X).
Script error: Parse error: Invalid rule: even(X) :- numbers(X), X div_by_5(X) :- numbers(X), X div_by_10(X) :- numbers(X), X ?- even(X)
