examples/datalog/15_arithmetic/21_modulo_operations.dl
% Test: Modulo operations
% Expected: Compute remainders correctly
% Category: 15_arithmetic
% Priority: P2 - Arithmetic patterns

.kg create test_modulo
.kg use test_modulo

+numbers[(10,), (15,), (20,), (25,), (30,)].

% Find even numbers (mod 2 = 0)
even(X) :- numbers(X), X % 2 = 0.

% Find numbers divisible by 5
div_by_5(X) :- numbers(X), X % 5 = 0.

% Find numbers divisible by both 2 and 5 (i.e., by 10)
div_by_10(X) :- numbers(X), X % 10 = 0.

?- even(X).
?- div_by_5(X).
?- div_by_10(X).

.kg use default
.kg drop test_modulo
